adjust in test suite and readme.md